[gd_scene load_steps=49 format=3 uid="uid://iq0r13bt8ah7"]

[ext_resource type="Script" uid="uid://cyuaeve0r54at" path="res://Player/Scripts/player.gd" id="1_ghon7"]
[ext_resource type="Script" uid="uid://b8tn0gs0xvihj" path="res://Player/Scripts/sprite_state_machine.gd" id="2_65u56"]
[ext_resource type="PackedScene" uid="uid://djrrfx64msbrd" path="res://Components/Health_Component/health_component.tscn" id="2_ijvqs"]
[ext_resource type="Script" uid="uid://dpwvkdonxcjpe" path="res://Player/Scripts/state_machine.gd" id="3_ngsr7"]
[ext_resource type="PackedScene" uid="uid://dmwkamt6017mo" path="res://Components/HitboxComponent/hitbox_component.tscn" id="3_ofs54"]
[ext_resource type="Script" uid="uid://bwjpth3hqvl4f" path="res://Player/Scripts/PlayerJump.gd" id="4_fp44l"]
[ext_resource type="Script" uid="uid://5hhi2rcyut4s" path="res://Player/Scripts/PlayerRunning.gd" id="4_tqm3n"]
[ext_resource type="Script" uid="uid://de3fl6c7nkprk" path="res://Player/Scripts/PlayerIdle.gd" id="4_v5iuh"]
[ext_resource type="Script" uid="uid://cfy8gxmg8vmnj" path="res://Player/Scripts/PlayerFalling.gd" id="6_rquh8"]
[ext_resource type="Script" uid="uid://cf1hevtctywns" path="res://Player/Scripts/PlayerIdleAction.gd" id="7_xg255"]
[ext_resource type="Script" uid="uid://dutl1hou2tqsi" path="res://Player/Scripts/PlayerActionAttack.gd" id="8_xg255"]
[ext_resource type="Script" uid="uid://bj3bam4mnmjts" path="res://Player/Scripts/PlayerGrapple.gd" id="9_5opso"]
[ext_resource type="Script" uid="uid://j1mjkgb87clx" path="res://Player/Scripts/PlayerSlide.gd" id="10_0cq60"]
[ext_resource type="Script" uid="uid://dq0fn4xni0mpw" path="res://Player/Scripts/PlayerWalljump.gd" id="11_fi1tf"]
[ext_resource type="Script" uid="uid://bn7row8c3y82q" path="res://Player/Scripts/PlayerDash.gd" id="11_sdgqk"]
[ext_resource type="Script" uid="uid://bph6wl571g058" path="res://Player/Scripts/PlayerGrapplePull.gd" id="13_yg5uo"]
[ext_resource type="Script" uid="uid://cmv12v0s7v0os" path="res://Player/Scripts/PlayerWallSlide.gd" id="14_l0nas"]
[ext_resource type="Script" uid="uid://cvgn18t4vsj1o" path="res://Game Scenes/PlayerWalking.gd" id="18_ql7fn"]
[ext_resource type="Texture2D" uid="uid://cjeyyge0rgcex" path="res://Player/Sprites/Grapple_Point_Arrow.png" id="19_4pi5e"]
[ext_resource type="PackedScene" uid="uid://bpxbab0acltj7" path="res://Player/playercamera.tscn" id="19_pmhtr"]
[ext_resource type="Texture2D" uid="uid://br7x7vsic3cj7" path="res://Player/Sprites/Legs_Walk.png" id="19_ql7fn"]
[ext_resource type="Texture2D" uid="uid://da20swppcg4dl" path="res://Player/Sprites/Body_Base.png" id="20_xg255"]
[ext_resource type="Texture2D" uid="uid://cnax402duofa5" path="res://Player/Sprites/Cane_Walk_Texture.png" id="21_58dwp"]
[ext_resource type="PackedScene" uid="uid://uklk3qd88hbn" path="res://Components/Attack_Component/Attack_Component.tscn" id="23_58dwp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oms6v"]
radius = 68.0
height = 360.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cjmbv"]
radius = 67.0
height = 336.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ql7fn"]
atlas = ExtResource("19_ql7fn")
region = Rect2(0, 0, 393, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg255"]
atlas = ExtResource("19_ql7fn")
region = Rect2(393, 0, 393, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_58dwp"]
atlas = ExtResource("19_ql7fn")
region = Rect2(786, 0, 393, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y5re"]
atlas = ExtResource("19_ql7fn")
region = Rect2(1179, 0, 393, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjus6"]
atlas = ExtResource("19_ql7fn")
region = Rect2(1572, 0, 393, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3ih0"]
atlas = ExtResource("19_ql7fn")
region = Rect2(1965, 0, 393, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysunm"]
atlas = ExtResource("19_ql7fn")
region = Rect2(2358, 0, 393, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye1qr"]
atlas = ExtResource("19_ql7fn")
region = Rect2(2751, 0, 393, 445)

[sub_resource type="SpriteFrames" id="SpriteFrames_ent5j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ql7fn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg255")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58dwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y5re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjus6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3ih0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysunm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye1qr")
}],
"loop": true,
"name": &"Running",
"speed": 12.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_dguh3"]
polygon = PackedVector2Array(-29, -18, -24, -3, -23, 6, -34, 26, -43, 57, -55, 103, -59, 135, -37, 113, -23, 90, -12, 63, -8, 54, -5, 90, 6, 132, 16, 115, 23, 79, 23, 43, 18, 25, 15, 9, 31, 18, 33, 133, 41, 133, 41, 20, 46, 12, 42, 2, 19, -6, 35, -25, 25, -26, 40, -54, 9, -39)

[sub_resource type="AtlasTexture" id="AtlasTexture_ent5j"]
atlas = ExtResource("21_58dwp")
region = Rect2(0, 0, 238, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeb7n"]
atlas = ExtResource("21_58dwp")
region = Rect2(238, 0, 238, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnh26"]
atlas = ExtResource("21_58dwp")
region = Rect2(476, 0, 238, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6pcp"]
atlas = ExtResource("21_58dwp")
region = Rect2(714, 0, 238, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6pgc"]
atlas = ExtResource("21_58dwp")
region = Rect2(952, 0, 238, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukadm"]
atlas = ExtResource("21_58dwp")
region = Rect2(1190, 0, 238, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq2gc"]
atlas = ExtResource("21_58dwp")
region = Rect2(1428, 0, 238, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3ako"]
atlas = ExtResource("21_58dwp")
region = Rect2(1666, 0, 238, 568)

[sub_resource type="SpriteFrames" id="SpriteFrames_rmf1q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ent5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeb7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnh26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6pcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6pgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukadm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq2gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3ako")
}],
"loop": true,
"name": &"Running",
"speed": 12.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_51o3i"]
polygon = PackedVector2Array(275.576, 4.23944, 76.3134, 8.47906, 69.9539, 27.5574, 6.35942, 21.198, 10.599, 74.1934, -76.3134, 55.115, -69.954, 118.71, -16.9586, 108.11, 19.0783, 116.59, 82.6728, 84.7925, 108.111, 89.0321, 122.949, 69.9537, 114.47, 44.5159, 241.659, 36.0367, 277.696, 23.3178)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_58dwp"]
radius = 162.0
height = 666.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_na4ea"]
size = Vector2(347.063, 370.5)

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_ghon7")
airspeed = 850.0
airResistance = 0.0
dashDistance = 2048.0
run_speed = 8048
run_acceleration = 0.015
friction = 0.15
swing_speed = 0.1

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 65)
shape = SubResource("CapsuleShape2D_oms6v")

[node name="HealthComponent" parent="." instance=ExtResource("2_ijvqs")]
MAX_HEALTH = 3.0

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_ofs54")]
collision_layer = 2
collision_mask = 8
health_component = NodePath("../HealthComponent")

[node name="collider" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, 72)
shape = SubResource("CapsuleShape2D_cjmbv")

[node name="SpriteStateMachine" type="Node" parent="."]
script = ExtResource("2_65u56")

[node name="ActionStateMachine" type="Node2D" parent="."]
script = ExtResource("3_ngsr7")

[node name="Idle" type="Node" parent="ActionStateMachine"]
script = ExtResource("7_xg255")

[node name="Attacking" type="Node" parent="ActionStateMachine"]
script = ExtResource("8_xg255")

[node name="MovementStateMachine" type="Node2D" parent="." node_paths=PackedStringArray("intitialState")]
script = ExtResource("3_ngsr7")
intitialState = NodePath("Idle")

[node name="Running" type="Node2D" parent="MovementStateMachine"]
script = ExtResource("4_tqm3n")

[node name="Jumping" type="Node2D" parent="MovementStateMachine"]
script = ExtResource("4_fp44l")

[node name="Idle" type="Node2D" parent="MovementStateMachine"]
script = ExtResource("4_v5iuh")

[node name="Falling" type="Node2D" parent="MovementStateMachine"]
script = ExtResource("6_rquh8")

[node name="Dashing" type="Node2D" parent="MovementStateMachine"]
script = ExtResource("11_sdgqk")

[node name="Grappling" type="Node2D" parent="MovementStateMachine"]
script = ExtResource("9_5opso")

[node name="Sliding" type="Node2D" parent="MovementStateMachine"]
script = ExtResource("10_0cq60")

[node name="WallJumping" type="Node2D" parent="MovementStateMachine"]
script = ExtResource("11_fi1tf")
walljumpHeight = 1280.0
risingwallJumpTime = 0.8

[node name="WallSliding" type="Node2D" parent="MovementStateMachine"]
script = ExtResource("14_l0nas")

[node name="WallCheckLeft" type="RayCast2D" parent="MovementStateMachine/WallSliding"]
target_position = Vector2(-126, 0)

[node name="WallCheckRight" type="RayCast2D" parent="MovementStateMachine/WallSliding"]
target_position = Vector2(139, 0)

[node name="GrapplePulling" type="Node2D" parent="MovementStateMachine"]
script = ExtResource("13_yg5uo")

[node name="Walking" type="Node2D" parent="MovementStateMachine"]
script = ExtResource("18_ql7fn")

[node name="PlayerSprite" type="Node2D" parent="."]

[node name="Legs" type="AnimatedSprite2D" parent="PlayerSprite"]
unique_name_in_owner = true
position = Vector2(11, 139)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ent5j")
animation = &"Running"
metadata/_edit_lock_ = true

[node name="Torso" type="Sprite2D" parent="PlayerSprite"]
position = Vector2(-3, -40)
scale = Vector2(0.471739, 0.471739)
texture = ExtResource("20_xg255")
metadata/_edit_lock_ = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="PlayerSprite/Torso"]
visible = false
position = Vector2(13.2489, -82.5531)
scale = Vector2(2.11982, 2.11982)
occluder = SubResource("OccluderPolygon2D_dguh3")

[node name="Arm" type="AnimatedSprite2D" parent="PlayerSprite/Torso"]
unique_name_in_owner = true
position = Vector2(-279.816, 322.212)
sprite_frames = SubResource("SpriteFrames_rmf1q")
animation = &"Running"
offset = Vector2(155, -30)
metadata/_edit_lock_ = true

[node name="LightOccluder2D2" type="LightOccluder2D" parent="PlayerSprite/Torso/Arm"]
visible = false
position = Vector2(55.1152, -89.032)
occluder = SubResource("OccluderPolygon2D_51o3i")

[node name="AimPivot" type="Marker2D" parent="."]
position = Vector2(0, -26)

[node name="coyoteTimer" type="Timer" parent="."]

[node name="dashCooldownTimer" type="Timer" parent="."]

[node name="Camera2D" parent="." instance=ExtResource("19_pmhtr")]
zoom = Vector2(0.25, 0.25)

[node name="GrappleCast" type="RayCast2D" parent="."]
position = Vector2(0, -25)
target_position = Vector2(2400, 0)
collision_mask = 4
collide_with_areas = true
metadata/_edit_lock_ = true

[node name="AttackComponent" parent="GrappleCast" instance=ExtResource("23_58dwp")]
position = Vector2(0, 0)
rotation = 0.0
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrappleCast/AttackComponent"]
position = Vector2(415, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_58dwp")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="GrappleCast"]
texture_filter = 5
position = Vector2(225, 0)
rotation = 1.5708
scale = Vector2(0.4, 0.4)
texture = ExtResource("19_4pi5e")

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(7.46875, 57.75)
shape = SubResource("RectangleShape2D_na4ea")

[connection signal="melee_attack" from="ActionStateMachine/Attacking" to="GrappleCast/AttackComponent" method="_on_attacking_melee_attack"]
[connection signal="timeout" from="coyoteTimer" to="." method="coyoteTimeout"]
[connection signal="timeout" from="dashCooldownTimer" to="." method="on_dash_cooldown_timer_timeout"]
